[gd_scene load_steps=12 format=3 uid="uid://br45wp8jdj0tx"]

[ext_resource type="Script" path="res://scripts/elevator_manager.gd" id="1_gb56k"]
[ext_resource type="Script" path="res://scripts/world_manager.gd" id="1_rofpd"]
[ext_resource type="Theme" uid="uid://dbk0vd03ipng1" path="res://resources/theme.tres" id="3_4glie"]
[ext_resource type="Script" path="res://camera.gd" id="3_et3qh"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="3_fapwp"]
[ext_resource type="Texture2D" uid="uid://dabxqxfeyelsc" path="res://data/icons/Missile Expansion.png" id="6_6j0ik"]
[ext_resource type="Texture2D" uid="uid://drpnoq1pm5q46" path="res://data/icons/Power Bomb Expansion.png" id="7_ntsns"]

[sub_resource type="SystemFont" id="SystemFont_82onk"]
font_names = PackedStringArray("Times New Roman")
oversampling = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_ebq5s"]
font = SubResource("SystemFont_82onk")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_57nyd"]
font = SubResource("SystemFont_82onk")
font_size = 26

[sub_resource type="LabelSettings" id="LabelSettings_3g8em"]
font = SubResource("SystemFont_82onk")
font_size = 26

[node name="main" type="Node2D"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="bg_color" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 3
color = Color(0.168627, 0.176471, 0.258824, 1)

[node name="elevator_manager" type="Control" parent="." node_paths=PackedStringArray("world_manager")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_gb56k")
world_manager = NodePath("../world_manager")

[node name="world_manager" type="Control" parent="." node_paths=PackedStringArray("ui")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 3
script = ExtResource("1_rofpd")
ui = NodePath("../UI/ui")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 20.0
script = ExtResource("3_et3qh")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="UI" node_paths=PackedStringArray("region_name_label", "room_name_label", "import_rdv_button", "rdv_game_hash_label", "inventory_visibility_button", "inventory_panel", "inventory_label", "etank_container", "missile_count_label", "missile_increase_button", "missile_decrease_button", "has_launcher_checkbox", "requires_launcher_checkbox", "pb_count_label", "pb_increase_button", "pb_decrease_button", "has_main_pb_checkbox", "requires_main_pb_checkbox", "inventory_container", "artifact_container", "give_all_button", "clear_button", "tricks_visibility_button", "tricks_panel", "max_button", "none_button", "tricks_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_fapwp")
region_name_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer2/region_name")
room_name_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer2/room_name")
import_rdv_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer/import_rdv")
rdv_game_hash_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer/rdv_game_hash")
inventory_visibility_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/inventory_visibility")
inventory_panel = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel")
inventory_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/Label")
etank_container = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer/etank_container")
missile_count_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/missile_expansion_label")
missile_increase_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer/missile_up")
missile_decrease_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer/missile_down")
has_launcher_checkbox = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer3/has_launcher")
requires_launcher_checkbox = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer3/req_launcher")
pb_count_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3/pb_label")
pb_increase_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3/VBoxContainer/pb_up")
pb_decrease_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3/VBoxContainer/pb_down")
has_main_pb_checkbox = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer2/has_main")
requires_main_pb_checkbox = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer2/req_main")
inventory_container = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/item_container")
artifact_container = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/artifact_container")
give_all_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/HBoxContainer/giveall")
clear_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/HBoxContainer/clear")
tricks_visibility_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer/tricks_visibility")
tricks_panel = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel")
max_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer/HBoxContainer/max")
none_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer/HBoxContainer/none")
tricks_container = NodePath("MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer/ScrollContainer/tricks_container")

[node name="MarginContainer" type="MarginContainer" parent="UI/ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ui/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="import_rdv" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_4glie")
text = "Import RDV"

[node name="rdv_game_hash" type="Label" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
mouse_filter = 0

[node name="room_name" type="Label" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_4glie")
label_settings = SubResource("LabelSettings_ebq5s")
horizontal_alignment = 1

[node name="region_name" type="Label" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_4glie")
label_settings = SubResource("LabelSettings_57nyd")
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2

[node name="inventory_visibility" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_4glie")
text = "< Inventory"

[node name="tricks_visibility" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_4glie")
text = "< Tricks"

[node name="inventory_panel" type="Panel" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_force_pass_scroll_events = false
theme = ExtResource("3_4glie")

[node name="MarginContainer" type="MarginContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="Label" type="Label" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")
text = "Inventory"
label_settings = SubResource("LabelSettings_3g8em")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="MarginContainer" type="MarginContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="etank_container" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/margin_left = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="missile_up" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "⇑"

[node name="missile_down" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "⇓"

[node name="missile_expansion_label" type="Label" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "0"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_6j0ik")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="pb_up" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "⇑"

[node name="pb_down" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "⇓"

[node name="pb_label" type="Label" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
text = "0"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("7_ntsns")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="has_launcher" type="CheckBox" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer3"]
layout_mode = 2
focus_mode = 0
text = "Has Launcher?"
alignment = 1

[node name="req_launcher" type="CheckBox" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "Require Launcher?"
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="has_main" type="CheckBox" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "Has Main?"
alignment = 1

[node name="req_main" type="CheckBox" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "Require Main?"
alignment = 1

[node name="item_container" type="GridContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("3_4glie")
theme_override_constants/v_separation = 20
columns = 4

[node name="artifact_container" type="Control" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 1.25
theme = ExtResource("3_4glie")

[node name="HSeparator2" type="HSeparator" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="giveall" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "All"

[node name="clear" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Clear"

[node name="HSeparator3" type="HSeparator" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/inventory_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="tricks_panel" type="Panel" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_force_pass_scroll_events = false
theme = ExtResource("3_4glie")

[node name="MarginContainer" type="MarginContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="Label" type="Label" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")
text = "Tricks"
label_settings = SubResource("LabelSettings_3g8em")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="ScrollContainer" type="ScrollContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="tricks_container" type="VBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("3_4glie")

[node name="HSeparator2" type="HSeparator" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="max" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Max"

[node name="none" type="Button" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "None"

[node name="HSeparator3" type="HSeparator" parent="UI/ui/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/tricks_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4glie")
